--- a/mod3_sol/css/styles.css
+++ b/mod3_sol/css/styles.css
@@ -107,7 +107,7 @@ section {
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
+  border: 1px solid #FFFFFF;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
